# atala-prism

./: .bazelignore  .gitignore  .mega-linter.yml  .scalafmt.conf  .travis.yml  AnonCred-method-spec.md  BUILD  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  PRISM_BACKEND_README.md  README-CEF.md  README.md  WORKSPACE  build.sbt  default.nix  dependencies.yaml  deps  install-scalafmt.sh  package-lock.json  package.json  pre-commit  preprod-values.yaml  propose.txt  protocol.docx  run-circleci-local.sh  scalastyle-config.xml  shell.nix  signing-commits.md  signing.md  test.md  trigger_tests.py  untitled.sc  version.sbt
.circleci/: Dockerfile  config.yml  directories_changed.sh  generate_cardano_variables.sh
.circleci/prism-scala-common/: Dockerfile
.circleci/scala-mill/: Dockerfile
.github/: .scala-steward.conf  PULL_REQUEST_TEMPLATE.md  generate_cardano_variables.sh  labeler.yml
.github/workflows/: bump-sdk-version.yml  gh-pages-documentation-website.yml  labeler.yml  lint.yml  main.yml  pr-lint.yml  pull-request-mc.yml  pull-request.yml  release.yml  sbt-dependency-submission.yml  scala-steward.yml  scheduled.yml  unit-tests.yml
apps/: README.md
apps/network-app-1/: build.sbt  post-message.sh  readme.md
atala/: AtalaAppPoC.scala  BUILD  ObftAppPoC.scala
atala/apps/: AppPoC.scala  BUILD  Cluster.scala  Server.scala  package.scala
atala/clock/: BUILD  Clock.scala  Snapshot.scala
atala/config/: BUILD  ObftNode.scala  ObftNodeValidator.scala  RemoteObftNode.scala  ServerAddress.scala  ServerAddressValidator.scala
atala/ledger/: BUILD  Ledger.scala  LedgerActorMessage.scala  StateStorage.scala
bazel_tools/: BUILD  protobuf.bzl
cardano/: cardano-in-atala-prism.md
credentials-verification/: .gitignore  README.md  build.sbt  build.sc  grpcuiNode.sh  postgres.sh  prepareBitcoind.sh  protos  scalapb.sc  stopBitcoind.sh
credentials-verification-android/: .gitignore  README.md  atala.jks  build.gradle  settings.gradle
credentials-verification-iOS/: .gitignore  .swiftlint.yml  Podfile  README.md  connector_user.proto
credentials-verification-landing/: .env  .gitignore  Dockerfile  README.md  docker-build.sh  package-lock.json  package.json  web-testing-script.sh
credentials-verification-web/: .dockerignore  .env  .eslintignore  .eslintrc  .gitignore  Dockerfile  README.md  package-lock.json  package.json  scalapb.proto  web-linting-validation-script.sh  web-testing-script.sh
credentials-verification-webextension/: .gitignore  .scalafmt.conf  README.md  build.sbt  run_local_internal.sh
crypto/: README.md  build.sbt
deprecated/: cli-settings.md  signing-commits.md
doc/: Design.md  Limitations.md
endorsements/: endorsements.md
enterprise-web/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
identity/: README.md  build.sbt
main/io/iohk/cef/agreements/: AgreementsMessage.scala  AgreementsService.scala  AgreementsServiceImpl.scala  BUILD  BUILD.bazel  package.scala
main/io/iohk/cef/agreements/test/: AgreementFixture.scala  AgreementsServiceSpec.scala
main/io/iohk/cef/data/: BUILD  BUILD.bazel  CanValidate.scala  DataItem.scala  DataItemAction.scala  DataItemService.scala  LabeledItem.scala  Owner.scala  Table.scala  Witness.scala
main/io/iohk/cef/data/business/entity/: UniversityDegree.scala
main/io/iohk/cef/data/error/: TableError.scala
main/io/iohk/cef/data/query/: DataItemQuery.scala  DataItemQueryEngine.scala  DataItemQueryRequest.scala  Translator.scala
main/io/iohk/cef/data/storage/: TableStorage.scala
main/io/iohk/cef/data/storage/mv/: MVTableStorage.scala
main/io/iohk/cef/data/test/: DataItemCodecSpec.scala  DataItemServiceSpec.scala  TableSpec.scala
main/io/iohk/cef/data/test/business/entity/: UniversityDegreeDataItemValidationSpec.scala
main/io/iohk/cef/data/test/query/: QueryEngineSpec.scala
main/io/iohk/cef/data/test/storage/: DummyTableStorage.scala
main/io/iohk/cef/data/test/storage/mv/: MVTableStorageSpec.scala
mirror/: tasks-and-leases.md
moe/: full-offline-mode.md
new-diagrams/: 05-issue-credential.puml
nix/: nixpkgs.nix
node/: README.md  SubscriptionMechanism.md  operations-ordering-submission.md
node-cli/: .gitignore  README.md  settings.gradle.kts
obft/: BUILD  Clock.scala  Crypto.scala  MemPool.scala  ObftAppPoC.scala  OuroborosBFT.scala  package.scala
on-premise-deployments/: README.md
prism-android-wallet/: README.md  build.gradle  settings.gradle
prism-backend/: .gitignore  .scalafmt.conf  README.md  build.sbt  package.json
prism-interactive-demo-web/: .babelrc  .dockerignore  .env  .env.development  .env.local  .env.production  .eslintignore  .eslintrc  .gitignore  Dockerfile  README.md  docker-build.sh  gatsby-config.js  gatsby-node.js  package-lock.json  package.json  sonar-project.properties  web-testing-script.sh
prism-ios-wallet/: .gitignore  Mintfile  Podfile  README.md  bootstrap.sh  config.swiftformat  project.yml
prism-kotlin-sdk/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
prism-management-console-web/: .dockerignore  .env  .eslintignore  .eslintrc  .gitignore  .npmrc  Dockerfile  README.md  STYLEGUIDE.md  package-lock.json  package.json  sonar-project.properties  web-linting-validation-script.sh  web-testing-script.sh
prism-sdk/: .gitignore  README.md  build.sbt
prism-web-wallet/: .gitignore  .sbtopts  NOTICE.md  README.md  build.sbt  run_local.sh  run_local_internal.sh
project/: FlywayConfig.scala  plugins.sbt
protocol/: key-derivation.md  late-publish.md  protocol-v0.2.md  unpublished-dids.md  updates.md
scala/: deps.bzl  labels.template  rules.bzl
sdk/: versioning.md
toolchains/: BUILD
(+9257 files in other folders)
