load("//scala:rules.bzl", "scala_library", "scala_test")

scala_library(
    name = "agreements",
    exports = [],
    deps = [
        "//3rdparty/jvm/com/typesafe/akka:akka_actor",
        "//3rdparty/jvm/org/slf4j:slf4j_api",
        "@codecs//src/io/iohk/codecs",
        "@crypto//src/io/iohk/crypto",
        "@network//src/io/iohk/network"
    ],
)

scala_test(
    name = "tests",
    visibility = ["//visibility:public"],
    deps = [
        "agreements",
        "//3rdparty/jvm/ch/qos/logback:logback_classic",
        "//3rdparty/jvm/ch/qos/logback:logback_core",
        "//3rdparty/jvm/com/typesafe/akka:akka_actor",
        "//3rdparty/jvm/org/mockito:mockito_core",
        "//3rdparty/jvm/org/scalatest",
        "@codecs//src/io/iohk/codecs",
        "@crypto//src/io/iohk/crypto",
        "@network//src/io/iohk/network",
        "@codecs//src/io/iohk/codecs/nio/test/utils",
        "@network//src/io/iohk/network:tests",
        "//main/io/iohk/cef/test",
        "//3rdparty/jvm/io/monix",
    ],
)
